# newartisans

./: .gitignore  .gitmodules  404.markdown  Dockerfile  LICENSE  Main.hs  Makefile  _config.yml  blog.cabal  config.yaml  default.nix  deploy  newartisans.cabal  newartisans.conf  publish  search.markdown
css/: custom-styles.css  hemingway.css  site.css
drafts/: 2014-06-15-further-down-the-rabbit-hole.md  2014-07-28-applying-denotational-design.md  2014-12-09-haskell-streaming-with-pipes.md  2014-12-18-coyoneda-trick.md  2014-12-21-managing-time-with-org-mode.md  2015-09-28-from-state-to-pipes.md  directory-naming.org  functors-not-containers.md  haskell-experience.md
files/: gprofiles.js
files/html5/: snake.html  snake.js
files/syntaxbrushes/: shBrushHaskell.js  shBrushObjC.js
js/: e-201422.js
newartisans.esproj/: Project.espressostorage  user.johnw.espressostorage
pages/: about-me.markdown  about-me.md
pending/: 2014-07-28-applying-denotational-design.md  2014-09-15-understanding-continuations.md  2015-01-23-exceptions-and-type-safety.org  2015-09-28-from-state-to-pipes.md  hello.nix
posts/: 2005-03-26-using-local-dns-caching.md  2005-03-26-using-local-dns-caching.org  2006-05-26-fighting-technology.md  2006-05-26-fighting-technology.org  2007-01-17-securing-the-buildbot.md  2007-01-17-securing-the-buildbot.org  2007-08-20-using-org-mode-as-a-day-planner.md  2007-08-20-using-org-mode-as-a-day-planner.org  2007-09-14-neat-tricks-with-iptables.md  2007-09-14-neat-tricks-with-iptables.org  2007-09-14-writing-selinux-policies.md  2007-09-14-writing-selinux-policies.org  2007-09-22-an-svk-primer.md  2007-09-22-an-svk-primer.org  2007-09-23-how-to-administer-openvpn.md  2007-09-23-how-to-administer-openvpn.org  2007-09-24-stateful-directory-scanning-in-python.md  2007-09-24-stateful-directory-scanning-in-python.org  2007-09-25-openssh-connection-mastering.md  2007-09-25-openssh-connection-mastering.org  2007-09-30-a-few-remarkable-mac-apps.md  2007-09-30-a-few-remarkable-mac-apps.org  2007-10-01-applescript-and-utf-8-arguments.md  2007-10-01-applescript-and-utf-8-arguments.org  2007-10-11-using-archiveopteryx-on-the-mac.md  2007-10-11-using-archiveopteryx-on-the-mac.org  2007-10-15-install-bootcamp-with-multiple-partitions.md  2007-10-15-install-bootcamp-with-multiple-partitions.org  2007-10-19-serving-up-mercurial-using-mod-python.md  2007-10-19-serving-up-mercurial-using-mod-python.org  2007-10-20-common-lisp-on-mac-os-x.md  2007-10-20-common-lisp-on-mac-os-x.org  2007-10-23-common-lisp-docs-for-devonthink.md  2007-10-23-common-lisp-docs-for-devonthink.org  2007-10-23-newartisans.com.md  2007-10-24-get-lisp-running-on-os-x-easy-version.md  2007-10-24-get-lisp-running-on-os-x-easy-version.org  2007-10-25-life-and-times-of-a-tcp-packet.md  2007-10-25-life-and-times-of-a-tcp-packet.org  2007-10-26-the-groovy-thing-about-groovy.md  (+170 more)
templates/: archives.html  blogpage.html  default.html  indexpostitem.html  list.html  meta.html  page.html  pagefooter.html  post.html  postfooter.html  postitem.html  posts.html  sitemap.xml  teaser.html
