Name:          newartisans
Version:       1.0.0
Synopsis:      Lost in Technopolis
Description:   Lost in Technopolis
Homepage:      http://newartisans.com/
License:       AllRightsReserved
License-file:  LICENSE
Author:        John Wiegley
Maintainer:    johnw@newartisans.com
Copyright:     (C) 2014 John Wiegley
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files: README.md

Executable newartisans
  Main-is:     Main.hs
  Ghc-options: -Wall

  Build-depends:
      base         >= 4.6    && < 5
    , attoparsec
    , binary
    , blaze-html
    , blaze-markup
    , directory
    , exceptions
    , filepath
    , foldl
    , hakyll
    , lens
    , old-locale
    , pandoc
    , pandoc-types
    , parsec
    , pipes
    , pipes-attoparsec
    , pipes-bytestring
    , pipes-group
    , pipes-safe
    -- , pipes-shell
    , pipes-text
    , process
    , split
    , strict
    , temporary
    , text
    , time
    , transformers
